--- a/bienvenida.html
+++ b/bienvenida.html
@@ -11,7 +11,7 @@
 <div class="group">
   <form action="ingresar.php" method="POST">
   <h2><em>Registro Completo</em></h2>
-
+  <center> <a href="./index.html"><input type="button" value="atras" /></a></center>
   </form>
 </div>
 </body>
